Intent Kotlin Practice

--- a/Kotlin/app/src/main/res/layout/activity_fourth.xml
+++ b/Kotlin/app/src/main/res/layout/activity_fourth.xml
@@ -5,16 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.FourthActivity">
-<androidx.appcompat.widget.AppCompatTextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="This is a little example"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    android:textStyle="bold"
-    android:textColor="@color/black"
-    android:textSize="30dp"
-    />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txtExample"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="This is a little example"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
