--- a/Kotlin/app/src/main/res/layout/activity_result_saludo.xml
+++ b/Kotlin/app/src/main/res/layout/activity_result_saludo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.FourthActivity">
+    tools:context=".Activities.exercices.ResultSaludoActivity">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txtExample"
