--- a/Kotlin/app/src/main/res/layout/activity_menu.xml
+++ b/Kotlin/app/src/main/res/layout/activity_menu.xml
@@ -13,7 +13,17 @@
         android:layout_height="wrap_content"
         android:text="Saludar"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
+
+        />
+
+    <Button
+        android:id="@+id/btnCalculator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Calculadora"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
 
         />
 
