--- a/Kotlin/app/src/main/res/layout/activity_imc_calculator.xml
+++ b/Kotlin/app/src/main/res/layout/activity_imc_calculator.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="32dp"
     android:background="@color/background_component_app"
     tools:context=".Activities.exercices.ImcCalculatorActivity">
 
@@ -11,7 +13,7 @@
         android:id="@+id/cardMan"
         android:layout_width="0dp"
         android:layout_height="150dp"
-        android:layout_margin="10dp"
+        android:layout_marginEnd="10dp"
         app:cardCornerRadius="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,20 +21,48 @@
         app:cardBackgroundColor="@color/background_component_selected"
         >
 
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:text="Hombre" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardWoman"
         android:layout_width="0dp"
         android:layout_height="150dp"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
         app:cardCornerRadius="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardMan"
         app:layout_constraintEnd_toEndOf="parent"
         app:cardBackgroundColor="@color/background_component_selected"
         >
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:text="Mujer" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
