--- a/Kotlin/app/src/main/res/layout/activity_imc_calculator.xml
+++ b/Kotlin/app/src/main/res/layout/activity_imc_calculator.xml
@@ -32,8 +32,9 @@
                 android:layout_height="100dp"
                 android:padding="10dp"
                 app:tint="@color/white"
-                android:contentDescription="@string/todo"
-                android:src="@drawable/ic_male"/>
+                android:src="@drawable/ic_male"
+                android:contentDescription="@string/male"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -41,7 +42,7 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="25sp"
-                android:text="@string/hombre" />
+                android:text="@string/male" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.cardview.widget.CardView>
@@ -75,10 +76,64 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/mujer"
+                android:text="@string/female"
                 android:textColor="@color/white"
                 android:textSize="25sp"
                 android:textStyle="bold" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardHeigth"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/cardMale"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cardBackgroundColor="@color/background_component"
+        app:cardCornerRadius="20dp"
+
+        >
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:text="@string/height"
+                android:layout_marginTop="15sp"
+                android:textAllCaps="true"
+                />
+
+            <TextView
+                android:id="@+id/tvHeight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="27sp"
+                tools:text="number"
+                android:layout_marginTop="15sp"
+                android:textAllCaps="true"
+                />
+
+            <com.google.android.material.slider.RangeSlider
+                android:id="@+id/rsHeight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
+                android:layout_marginBottom="15sp"
+                android:stepSize="1"
+                android:valueFrom="120"
+                android:valueTo="200"
+                />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.cardview.widget.CardView>
 
