--- a/Kotlin/app/src/main/res/layout/activity_imc_calculator.xml
+++ b/Kotlin/app/src/main/res/layout/activity_imc_calculator.xml
@@ -119,7 +119,7 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="27sp"
-                tools:text="number"
+                android:text="120 cm"
                 android:layout_marginTop="15sp"
                 android:textAllCaps="true"
                 />
